--- a/templates/result.html
+++ b/templates/result.html
@@ -127,7 +127,7 @@
     </style>
   </head>
   <body>
-    <form action="http://localhost:5000/" method="post" class="decor">
+    <form method="post" class="decor">
       <div class="form-left-decoration"></div>
       <div class="form-right-decoration"></div>
       <div class="circle"></div>
